<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reversi</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_menu_screen">MenuScreen</string>
    <string name="play_timed">Play Timed</string>
    <string name="play_normal">Play Normal</string>
    <string name="options">Options</string>
    <string name="dialog_title_play">Please select Versus</string>
    <string name="dialog_start_message_play">You have slected to play</string>
    <string name="cpu">CPU</string>
    <string name="player">Player</string>
    <string name="player2">Player 2</string>
    <string name="normal">Normal</string>
    <string name="timed">Timed</string>
    <string name="title_activity_game">Game</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_game_screen">GameScreen</string>
    <string name="action_settings">Settings</string>
    <string name="show_moves">Show Moves</string>
    <string name="you">You</string>
    <string name="score">Score:</string>
    <string name="time_00_00">Time 00:00</string>
    <string name="total_time_00_00">Total time: 00:00</string>
    <string name="title_activity_options">Options</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="options_import">Import</string>
    <string name="player_1_name">Player 1 Name</string>
    <string name="player_2_name">Player 2 Name</string>
    <string name="options_time_label">Amount of time in Timed Mode (seconds)</string>
    <string name="options_time_hint">60</string>
    <string name="allow_hints">Allow Hints</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="show_the_show_moves_button_">Show the Show Moves button:</string>
    <string name="set_background">Set Background</string>
    <string name="delete_data">Delete Data</string>
    <string name="delete_your_hard_earned_data">Delete your hard earned data</string>
    <string name="save_changes">Save Changes</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete ALL data</string>
    <string name="dialog_title_delete">Delete all data?</string>
    <string name="title_activity_high_scores">High Scores</string>
    <string name="high_scores">High Scores</string>
    <string name="enable_sound">Enable Sound</string>
    <string name="turn_on_to_enable_sound_">"Turn on to enable sound: "</string>
    <string name="enable_alternative_pieces">Enable alternative pieces</string>
    <string name="alternative_colours">Alternative Colours</string>
    <string name="back_to_main_message">Back to main menu?</string>
    <string name="back_to_main_title">End Game?</string>
    <string name="yes">Yes</string>
    <string name="new_game">New Game</string>

</resources>