<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <Button
        android:id="@+id/timed_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/play_timed" />

    <Button
        android:id="@+id/normal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/timed_button"
        android:layout_centerHorizontal="true"
        android:text="@string/play_normal" />

    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/title" />

    <Button
        android:id="@+id/highscores_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timed_button"
        android:layout_centerHorizontal="true"
        android:text="@string/high_scores" />

    <Button
        android:id="@+id/options_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/highscores_button"
        android:layout_centerHorizontal="true"
        android:text="@string/options" />

</RelativeLayout>