<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
    tools:context=".GameScreen" >

    <RelativeLayout
        android:id="@+id/player2Container"
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <TextView
            android:id="@+id/player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/player2_contact_image"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:text="@string/cpu"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/player2_contact_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
          	android:layout_alignParentLeft="true"
            android:src="@drawable/cell_white" />

        <TextView
            android:id="@+id/player2_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/score"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/player2_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:text="@string/time_00_00"
            android:textSize="20sp" />
    </RelativeLayout>

    <GridView
        android:id="@+id/gameboard_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player2Container"
        android:adjustViewBounds="true"
        android:background="@color/purple"
        android:gravity="center"
        android:horizontalSpacing="0dp"
        tools:listitem="@android:layout/simple_list_item_1" >
    </GridView>
    
    <RelativeLayout
        android:id="@+id/player1Container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/gameboard_grid" >
		      
        <ImageView
            android:id="@+id/player1_contact_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"       
            android:src="@drawable/cell_black" />
        
        <TextView
            android:id="@+id/player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/player1_contact_image"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:background="@color/yellow"
            android:text="@string/you"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/player1_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/score"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/player1_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:text="@string/time_00_00"
            android:textSize="20sp" />   
            </RelativeLayout>     

    <Button
        android:id="@+id/show_moves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/show_moves" />

    <TextView
        android:id="@+id/global_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/total_time_00_00"
        android:textSize="20sp" />
	     
</RelativeLayout>